--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -2,11 +2,13 @@ name: verify
 
 on:
   push:
-    paths-ignore:
-      - '**.md'
+    paths:
+      - '!docs/**'
+      - '!**.md'
   pull_request:
-    paths-ignore:
-      - '**.md'
+    paths:
+      - '!docs/**'
+      - '!**.md'
 jobs:
   lint:
     runs-on: ubuntu-latest
