--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -5,11 +5,13 @@ on:
     branches: [ main ]
     paths:
       - "**.md"
+      - "README.md"
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
     paths:
       - "**.md"
+      - "README.md"
 
 
 jobs:
