--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,6 +14,8 @@ name: "CodeQL"
 on:
   push:
     branches: [ main ]
+    paths:
+      - '!docs/**'
   #pull_request:
     #The branches below must be a subset of the branches above
     #branches: [ main ]
