--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -4,9 +4,13 @@ name: "s3test compatibility"
 on:
   push:
     branches: [ main ]
+    paths:
+      - '!docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
+    paths:
+      - '!docs/**'
 
 jobs:
   s3tests:
