--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -4,14 +4,12 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "**.md"
-      - "README.md"
+      - '!docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
     paths:
-      - "**.md"
-      - "README.md"
+      - '!docs/**'
 
 
 jobs:
