--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ addons:
       - attr
       - lsof
       - gcc-mingw-w64 # for windows
+env:
+  global:
+    - CONTINUE_RUN=false
 before_install:
   - bash ./check-docs.sh
 install: true
@@ -31,7 +34,7 @@ jobs:
         - psql -c 'create database test;' -U postgres
         - make
         - sudo make -C fstests setup
-    if: env(TRAVIS) = true
+    if: env(CONTINUE_RUN) = true
     - stage: "build and test"
       script:
         - make test
@@ -49,4 +52,4 @@ jobs:
         - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
         - sudo ./juicefs gc localhost
         - sudo ./juicefs fsck localhost
-      if: env(TRAVIS) = true
+      if: env(CONTINUE_RUN) = true
