--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
       - gcc-mingw-w64 # for windows
 env:
   global:
-    - CONTINUE_RUN=false
+    - CONTINUE_RUN=true
 before_install:
   - bash ./check-docs.sh
 install: true
@@ -34,7 +34,6 @@ jobs:
         - psql -c 'create database test;' -U postgres
         - make
         - sudo make -C fstests setup
-    if: env(CONTINUE_RUN) = true
     - stage: "build and test"
       script:
         - make test
@@ -52,4 +51,4 @@ jobs:
         - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
         - sudo ./juicefs gc localhost
         - sudo ./juicefs fsck localhost
-      if: env(CONTINUE_RUN) = true
+
