--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,6 @@ jobs:
         - psql -c 'create database test;' -U postgres
         - make
         - sudo make -C fstests setup
-    - stage: "build and test"
-      script:
         - make test
         - cat cov1.out >> coverage.txt
         - cat cov2.out >> coverage.txt
@@ -52,4 +50,4 @@ jobs:
         - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
         - sudo ./juicefs gc localhost
         - sudo ./juicefs fsck localhost
-
+      if: (env(TRAVIS) = false)
