ignore modify docs (#1017)
* ignore modify docs

* add doc test

* add ignore path to verify

* add doc test

* test md modify

* change s3 yml

* change md doc

* add path ignore to s3 yml

* change md doc

* path ignore verify

* add doc test

* modify verify

* modify test md

* modify verify

* modify test md

* modify verify

* modify test md

* test modify makefile

* add path-ignore to verify

* modify test md

* modify verify

* modify test md

* reset makefile

* makefiel newline

* modify test md

* modify verify

* modify test md

* modify verify

* test md

* makefile

* modify verify

* modify makefile

* paths ignore

* test md

* change verify

* test md

* makefile change

* change test md

* change verify

* change test md

* change verify

* change test md

* verify

* test md

* makefile

* test md

* verify

* test md

* makefile

* verify

* test md

* reset yml

* ignore md

* change wintest

* rm test md

* add test md

* change wintest

* final version

* change s3test

* change wintest yml

* paths-ignore

* test doc modify

* reset readme

* delete empty newline

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -3,10 +3,13 @@ name: "test jfs on windows"
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
-
+    paths-ignore:
+      - 'docs/**'
 
 
 jobs:
