--- a/.travis.yml
+++ b/.travis.yml
@@ -27,27 +27,5 @@ install: true
 jobs:
   include:
     - stage: "prepare"
+      script: echo $TRAVIS
       if: env(TRAVIS) = true
-      script:
-        - echo "jobs TRAVIS"
-        - echo $TRAVIS
-        - export GO111MODULE=on
-        - sudo mysql -e "create database dev;"
-        - psql -c 'create database test;' -U postgres
-        - make
-        - sudo make -C fstests setup
-        - make test
-        - cat cov1.out >> coverage.txt
-        - cat cov2.out >> coverage.txt
-        - sudo DURATION=10 make -C fstests all
-        - make -C fstests flock
-        - make -C sdk/java/libjfs
-        - cd sdk/java
-        - sudo `which mvn` compile -B --quiet || sudo `which mvn` compile -B --quiet
-        - sudo chmod 777 /jfs/tmp
-        - sudo `which mvn` test -B
-        - sudo `which mvn` package -B -Dmaven.test.skip=true --quiet || sudo `which mvn` package -B -Dmaven.test.skip=true --quiet
-        - cd ../../
-        - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
-        - sudo ./juicefs gc localhost
-        - sudo ./juicefs fsck localhost
