--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,10 @@ before_install:
   - source ./check-docs.sh
   - echo "before_install TRAVIS"
   - echo $TRAVIS
-install: true
+install: skip
 jobs:
   include:
     - stage: "prepare"
       script: echo $TRAVIS
-      if: env(TRAVIS) = true
+      if: 1 = 1
+      env: TRAVIS=true
