--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,10 @@ install: skip
 jobs:
   include:
     - stage: "prepare"
-      script: echo $TRAVIS
+      script:
+        - echo $TRAVIS
+        - echo "TRAVIS"
+        - echo "TRAVIS"
+        - echo $TRAVIS
       if: 1 = 1
       env: TRAVIS=true
