--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,7 @@ jobs:
         - echo $TRAVIS
       if: 1 = 1
       env: TRAVIS=true
+
+    - stage: "test"
+        - echo "TRAVIS value"
+        - echo $TRAVIS
