--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ jobs:
         - echo "TRAVIS"
         - echo "TRAVIS"
         - echo $TRAVIS
+        - echo "prepare TRAVIS"
       if: env(TRAVIS) = true
 
     - stage: "test"
