--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ before_install:
   - source ./check-docs.sh
   - echo "before_install TRAVIS"
   - echo $TRAVIS
-  - if [ $TRAVIS = false ]; then
-      echo "exit now";
+  - if [ $TRAVIS == false ]; then
       exit 0;
     fi
 install: true
