--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ addons:
       - gcc-mingw-w64 # for windows
 before_install:
   - source ./check-docs.sh
+  - echo "TRAVIS env"
+  - echo $TRAVIS
   - |
     if [ $TRAVIS == false ]; then
       exit 0;
