--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,8 @@ addons:
       - lsof
       - gcc-mingw-w64 # for windows
 before_install:
-  - source ./check-docs.sh
-  - |
-    if [ $TRAVIS == false ]; then
-      exit 0;
-    fi
+  - source ./check-changed.sh
+  - if [ $SKIP_TEST == true ]; then exit 0; fi
 install: true
 before_script:
   - export GO111MODULE=on
