--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ addons:
       - attr
       - lsof
       - gcc-mingw-w64 # for windows
+before_install:
+  - source ./check-changed.sh
+  - if [ $SKIP_TEST == true ]; then exit 0; fi
 install: true
 before_script:
   - export GO111MODULE=on
@@ -37,7 +40,7 @@ script:
   - sudo `which mvn` compile -B --quiet || sudo `which mvn` compile -B --quiet
   - sudo chmod 777 /jfs/tmp
   - sudo `which mvn` test -B
-  - sudo `which mvn` package -B -Dmaven.test.skip=true --quiet || sudo `which mvn` package -B -Dmaven.test.skip=true --quiet  
+  - sudo `which mvn` package -B -Dmaven.test.skip=true --quiet || sudo `which mvn` package -B -Dmaven.test.skip=true --quiet
   - cd ../../
   - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
   - sudo ./juicefs gc localhost
