add test for tikv

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,14 @@ addons:
 before_install:
   - source ./check-changed.sh
   - if [ $SKIP_TEST == true ]; then exit 0; fi
+
+
 install: true
 before_script:
   - export GO111MODULE=on
   - sudo mysql -e "create database dev;"
   - psql -c 'create database test;' -U postgres
+  - curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh && source ~/.bash_profile && nohup tiup playground --mode tikv-slim >> output.log 2>&1 &
   - make
   - sudo make -C fstests setup
 script:
