--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
 before_install:
   - source ./check-changed.sh
   - if [ $SKIP_TEST == true ]; then exit 0; fi
+  - curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh && source .bash_rc && nohup tiup playground --mode tikv-slim >> output.log 2>&1 &
+
 install: true
 before_script:
   - export GO111MODULE=on
@@ -29,7 +31,6 @@ before_script:
   - psql -c 'create database test;' -U postgres
   - make
   - sudo make -C fstests setup
-  - curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh && source .bash_profile && nohup tiup playground --mode tikv-slim >> output.log 2>&1 &
 script:
   - make test
   - cat cov1.out >> coverage.txt
