--- a/.github/workflows/pjdfstest.yml
+++ b/.github/workflows/pjdfstest.yml
@@ -12,7 +12,7 @@ on:
       - 'docs/**'
 
 jobs:
-  s3tests:
+  pjdfstest:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -26,7 +26,6 @@ jobs:
       - uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: '5.34'
-          install-modules-with: TAP-Harness
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -53,9 +52,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install autoconf
+          sudo apt-get install -y libtap-harness-archive-perl
+          cd /tmp/jfs/
           git clone https://github.com/pjd/pjdfstest.git
           cd pjdfstest
           autoreconf -ifs
           ./configure
-          pwd
-          cd /tmp/jfs/
+          sudo prove -rv tests/
