--- a/.github/workflows/ltpfs.yml
+++ b/.github/workflows/ltpfs.yml
@@ -60,4 +60,5 @@ jobs:
 
       - name: LTP_FS
         run: |
+          sudo sed -i 's/^gf[0-9]\{2\}.*//g' runtest/fs
           sudo ./runltp -d /tmp/jfs -f fs
