--- a/.github/workflows/ltpfs.yml
+++ b/.github/workflows/ltpfs.yml
@@ -12,7 +12,7 @@ on:
       - 'docs/**'
 
 jobs:
-  ltp:
+  ltpfs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -44,7 +44,7 @@ jobs:
         run: |
           sudo ./juicefs mount -d redis://127.0.0.1:6379/1 /tmp/jfs &
 
-      - name: Install LTP
+      - name: LTP FS
         run: |
           git clone https://github.com/linux-test-project/ltp.git
           cd ltp
@@ -53,12 +53,6 @@ jobs:
           make
           sudo make install
           cd /opt/ltp
-
-      - name: LTP_FSX_IO
-        run: |
           sudo ./runltp -d /tmp/jfs -f fs_bind,fs_perms_simple,fsx,io,smoketest
-
-      - name: LTP_FS
-        run: |
           sudo sed -i 's/^gf[0-9]\{2\}.*//g' runtest/fs
           sudo ./runltp -d /tmp/jfs -f fs
