--- a/.github/workflows/ltpsyscalls.yml
+++ b/.github/workflows/ltpsyscalls.yml
@@ -64,5 +64,5 @@ jobs:
           sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
           sudo touch runtest/syscalls01
           sudo chmod 777 runtest/syscalls01
-          sudo head -910 runtest/syscalls > runtest/syscalls01
+          sudo head -n 910 runtest/syscalls > runtest/syscalls01
           sudo ./runltp -d /tmp/jfs -f syscalls01
