--- a/.github/workflows/ltpsyscalls.yml
+++ b/.github/workflows/ltpsyscalls.yml
@@ -64,5 +64,14 @@ jobs:
           sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
           sudo touch runtest/syscalls01
           sudo chmod 777 runtest/syscalls01
-          sudo head -n 910 runtest/syscalls > runtest/syscalls01
+          sudo head -n 500 runtest/syscalls > runtest/syscalls01
           sudo ./runltp -d /tmp/jfs -f syscalls01
+
+      - name: CAT MORE LOG
+        if: always()
+        run: |
+          cat /opt/ltp/results/LTP_RUN_ON-2021.*log
+          echo "--------------------"
+          cat /opt/ltp/output/LTP_RUN_ON-2021.*failed
+          echo "--------------------"
+          cat /opt/ltp/output/LTP_RUN_ON-2021.*tconf
