--- a/.github/workflows/ltpsyscalls2.yml
+++ b/.github/workflows/ltpsyscalls2.yml
@@ -64,12 +64,14 @@ jobs:
           sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
           sudo touch runtest/syscalls02
           sudo chmod 777 runtest/syscalls02
-          sudo tail -n 200 runtest/syscalls > runtest/syscalls02
+          sudo tail -n 830 runtest/syscalls > runtest/syscalls02
           sudo ./runltp -d /tmp/jfs -f syscalls02 -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
+          sudo ls -l /opt/ltp/results
+          sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
           echo "--------------------"
           sudo cat /opt/ltp/output/result.log.failed
