get complete error list

--- a/.github/workflows/ltpsyscalls.yml
+++ b/.github/workflows/ltpsyscalls.yml
@@ -60,12 +60,14 @@ jobs:
           cd /opt/ltp
           sudo chmod +x /tmp/rm_syscalls_list.sh
           sudo chmod 777 runtest/syscalls
-          sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
           sudo ./runltp -d /tmp/jfs -f syscalls -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
+          cat runtest/syscalls | wc -l
+          sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
+          cat runtest/syscalls | wc -l
           sudo ls -l /opt/ltp/results
           sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
