--- a/.github/workflows/ltpfs.yml
+++ b/.github/workflows/ltpfs.yml
@@ -54,16 +54,12 @@ jobs:
           sudo make install
           cd /opt/ltp
           sudo ./runltp -d /tmp/jfs -f fs_bind,fs_perms_simple,fsx,io,smoketest
-          sudo sed -i 's/^gf[0-9]\{2\}.*//g' runtest/fs
-          sudo sed -i 's/^rwtest[0-9]\{2\}.*//g' runtest/fs
-          sudo sed -i 's/^iogen01.*//g' runtest/fs
-          sudo sed -i 's/^quota_remount_test01.*//g' runtest/fs
-          sudo sed -i 's/^isofs.*//g' runtest/fs
           sudo ./runltp -d /tmp/jfs -f fs -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
+          cat runtest/fs | wc -l
           sudo ls -l /opt/ltp/results
           sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
