--- a/.github/workflows/ltpfs.yml
+++ b/.github/workflows/ltpfs.yml
@@ -29,7 +29,10 @@ jobs:
           fetch-depth: 1
 
       - name: Build linux target
-        run: make juicefs
+        run: |
+          make juicefs
+          cp .github/workflows/bash/rm_fs /tmp/
+          cp .github/workflows/bash/rm_list.sh /tmp/
 
       - name: Run Redis
         run: |
@@ -53,13 +56,17 @@ jobs:
           make
           sudo make install
           cd /opt/ltp
+          sudo chmod +x /tmp/rm_list.sh
+          sudo chmod 777 runtest/fs
           sudo ./runltp -d /tmp/jfs -f fs_bind,fs_perms_simple,fsx,io,smoketest
           sudo ./runltp -d /tmp/jfs -f fs -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
-          cat runtest/fs | wc -l
+          cat /opt/ltp/runtest/fs| wc -l
+          sudo /tmp/rm_list.sh /tmp/rm_fs /opt/ltp/runtest/fs
+          cat /opt/ltp/runtest/fs | wc -l
           sudo ls -l /opt/ltp/results
           sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
