--- a/.github/workflows/ltpsyscalls.yml
+++ b/.github/workflows/ltpsyscalls.yml
@@ -30,10 +30,9 @@ jobs:
 
       - name: Build linux target
         run: |
-          hostnamectl
           make juicefs
-          cp .github/workflows/rm_syscalls_list /tmp/
-          cp .github/workflows/rm_syscalls_list.sh /tmp/
+          cp .github/workflows/bash/rm_syscalls /tmp/
+          cp .github/workflows/bash/rm_list.sh /tmp/
 
 
       - name: Run Redis
@@ -58,16 +57,16 @@ jobs:
           make
           sudo make install
           cd /opt/ltp
-          sudo chmod +x /tmp/rm_syscalls_list.sh
+          sudo chmod +x /tmp/rm_list.sh
           sudo chmod 777 runtest/syscalls
           sudo ./runltp -d /tmp/jfs -f syscalls -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
-          cat runtest/syscalls | wc -l
-          sudo /tmp/rm_syscalls_list.sh /tmp/rm_syscalls_list runtest/syscalls
-          cat runtest/syscalls | wc -l
+          cat /opt/ltp/runtest/syscalls | wc -l
+          sudo /tmp/rm_list.sh /tmp/rm_syscalls /opt/ltp/runtest/syscalls
+          cat /opt/ltp/runtest/syscalls | wc -l
           sudo ls -l /opt/ltp/results
           sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
