--- a/.github/workflows/ltpsyscallstail.yml
+++ b/.github/workflows/ltpsyscallstail.yml
@@ -12,7 +12,7 @@ on:
       - 'docs/**'
 
 jobs:
-  ltpsyscalls01:
+  ltpsyscallstail:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -60,12 +60,14 @@ jobs:
           sudo chmod +x /tmp/rm_list.sh
           sudo chmod 777 runtest/syscalls
           sudo /tmp/rm_list.sh /tmp/rm_syscalls /opt/ltp/runtest/syscalls
-          sudo ./runltp -d /tmp/jfs -f syscalls -C result.log.failed -T result.log.tconf -l result.log
+          sudo tail -n 900 runtest/syscalls > runtest/syscallshalf
+          sudo chmod 777 runtest/syscallshalf
+          sudo ./runltp -d /tmp/jfs -f syscallshalf -C result.log.failed -T result.log.tconf -l result.log
 
       - name: CAT MORE LOG
         if: always()
         run: |
-          cat /opt/ltp/runtest/syscalls | wc -l
+          cat /opt/ltp/runtest/syscallshalf | wc -l
           sudo ls -l /opt/ltp/results
           sudo ls -l /opt/ltp/output
           sudo cat /opt/ltp/results/result.log
