--- a/.github/workflows/ltpfshead.yml
+++ b/.github/workflows/ltpfshead.yml
@@ -59,19 +59,7 @@ jobs:
           sudo chmod +x /tmp/rm_list.sh
           sudo chmod 777 runtest/fs
           sudo /tmp/rm_list.sh /tmp/rm_fs /opt/ltp/runtest/fs
-          sudo tail -n 50 runtest/syscalls > runtest/fshalf
+          sudo head -n 50 runtest/fs > runtest/fshalf
           sudo chmod 777 runtest/fshalf
           sudo ./runltp -d /tmp/jfs -f fs_bind,fs_perms_simple,fsx,io,smoketest
           sudo ./runltp -d /tmp/jfs -f fshalf -C result.log.failed -T result.log.tconf -l result.log
-
-      - name: CAT MORE LOG
-        if: always()
-        run: |
-          cat /opt/ltp/runtest/fshalf | wc -l
-          sudo ls -l /opt/ltp/results
-          sudo ls -l /opt/ltp/output
-          sudo cat /opt/ltp/results/result.log
-          echo "--------------------"
-          sudo cat /opt/ltp/output/result.log.failed
-          echo "--------------------"
-          sudo cat /opt/ltp/output/result.log.tconf
