--- a/.github/workflows/ltpfstail.yml
+++ b/.github/workflows/ltpfstail.yml
@@ -59,6 +59,6 @@ jobs:
           sudo chmod +x /tmp/rm_list.sh
           sudo chmod 777 runtest/fs
           sudo /tmp/rm_list.sh /tmp/rm_fs /opt/ltp/runtest/fs
-          sudo tail -n 20 runtest/fs > runtest/fshalf
-          sudo chmod 777 runtest/fshalf
-          sudo ./runltp -d /tmp/jfs -f fshalf -C result.log.failed -T result.log.tconf -l result.log
+          sudo tail -n 25 runtest/fs > runtest/fstail
+          sudo chmod 777 runtest/fstail
+          sudo ./runltp -d /tmp/jfs -f fstail -C result.log.failed -T result.log.tconf -l result.log
