--- a/.github/workflows/ltpsyscallstail.yml
+++ b/.github/workflows/ltpsyscallstail.yml
@@ -2,14 +2,8 @@ name: "ltp"
 
 on:
   push:
-    branches: [ main ]
-    paths-ignore:
-      - 'docs/**'
-  pull_request:
-    #The branches below must be a subset of the branches above
-    branches: [ main ]
-    paths-ignore:
-      - 'docs/**'
+    tags:
+      - v*
 
 jobs:
   ltpsyscallstail:
