--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ before_script:
   - make
   - sudo make -C fstests setup
 script:
+  - sudo chmod 777 /var/jfsCache
   - make test
   - cat cov1.out >> coverage.txt
   - cat cov2.out >> coverage.txt
