--- a/.github/workflows/pjdfstest.yml
+++ b/.github/workflows/pjdfstest.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Juicefs Format
         run: |
-          sudo ./juicefs format redis://127.0.0.1:6379/1 pics
+          sudo ./juicefs format redis://127.0.0.1:6379/1 --trash-days 0 pics
 
       - name: Juicefs Mount
         run: |
