--- a/.github/workflows/mysqltest.yml
+++ b/.github/workflows/mysqltest.yml
@@ -8,6 +8,7 @@ on:
     paths-ignore:
       - 'docs/**'
 
+
 jobs:
   mysqltest:
     runs-on: ubuntu-latest
@@ -76,7 +77,8 @@ jobs:
           echo "report-interval=10" >>/tmp/config.cfg
           echo "db-driver=mysql" >>/tmp/config.cfg
 
-      - name: Small Table Test
+      - name: Small Size Table Test
+        run: |
           sudo df -h /
           sudo sysbench --config-file=/tmp/config.cfg oltp_point_select --tables=3500 --table-size=10000 prepare
           sudo sysbench --config-file=/tmp/config.cfg oltp_read_only --tables=3500 --table-size=10000 run
@@ -84,3 +86,4 @@ jobs:
           sudo sysbench --config-file=/tmp/config.cfg oltp_read_write --tables=3500 --table-size=10000 run
           sudo sysbench --config-file=config.cfg oltp_point_select --tables=16 --table-size=10000 cleanup
           sudo df -h /
+
